<resources>
    <string name="facebook_app_id">830693420389560</string>
    <string name="client_id">testclient</string>
    <string name="client_secret">testpass</string>

    <string name="app_name">PhotosTalk</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="error">Error</string>
    <string name="full_name_cannot_be_empty">Full name cannot be empty</string>
    <string name="username_cannot_be_empty">Username cannot be empty</string>
    <string name="username_cannot_have_whitespaces">Username cannot have whitespaces</string>
    <string name="email_cannot_be_empty">Email cannot be empty.</string>
    <string name="invalid_email_address">Invalid email address.</string>
    <string name="password_cannot_be_empty">Password cannot be empty.</string>
    <string name="unknown_response_format">Unknown response format.</string>
    <string name="unknown_error_has_occurred">Unknown error has occurred.</string>
    <string name="no_internet_connection">Not internet connection.</string>
    <string name="loading">Loading</string>
    <string name="login">Login</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="login_to_photostalk">Login to PhotosTalk</string>
    <string name="please_wait">Please wait..</string>
    <string name="dont_have_an_account_register_here"><![CDATA[Don\'t have an account? Register here]]></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="camera_is_not_available">Camera is not available.</string>
    <string name="select_best_photo">Select Best Photo</string>
    <string name="could_not_initilaize_the_recorder">Could not initialize the recorder.</string>
    <string name="error_while_saving_file">Error while saving file.</string>
    <string name="could_not_play_the_audio">Could not play the audio</string>
    <string name="failed_to_obtain_new_access_token">Failed to obtain new access token.</string>
    <string name="user_not_logged_in">User not logged in.</string>
    <string name="an_error_occurred_while_getting_user_info">An error occurred while getting the user info.</string>
    <string name="error_loading_files">Error loading files.</string>
    <string name="uploading">Uploading</string>
    <string name="uploading_cancelled">Uploading cancelled</string>
    <string name="could_not_save_filtered_image">Could not save filtered image.</string>
    <string name="could_not_load_the_recording_file">Could not load the recording file.</string>
    <string name="failed_to_load_the_audio">Failed to load the audio.</string>
    <string name="posting_comment">Posting Comment...</string>
    <string name="share_to">Share to</string>
    <string name="a_report_has_been_sent_successfully">A report has been sent successfully.</string>
    <string name="comment_has_been_deleted_successfully">Comment has been deleted successfully</string>
    <string name="story">Story</string>
    <string name="showing_story">Showing Story</string>
    <string name="delete">Delete</string>
    <string name="report">Report</string>
    <string name="options">Options</string>
    <string name="commented">" Commented"</string>
    <string name="profile">Profile</string>
    <string name="about_me">About Me</string>
    <string name="stories">Stories</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="Edit">Edit</string>
    <string name="change_password">Change Password</string>
    <string name="block">Block</string>
    <string name="stories_captial">STORIES</string>
    <string name="about_capital">ABOUT</string>
    <string name="photos_capital">PHOTOS</string>
    <string name="s_story">%s Story</string>
    <string name="requested">Requested</string>
    <string name="the_user_has_been_reported">The user has been reported.</string>
    <string name="unblocked_successfully">Unblocked successfully</string>
    <string name="blocked_successfully">Blocked Successfully</string>
    <string name="unblock">Unblock</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="old_password_cannot_be_empty">Old password cannot be empty.</string>
    <string name="new_password_cannot_be_empty">New password cannot be empty.</string>
    <string name="please_confirm_your_password">Please confirm your password.</string>
    <string name="the_new_passwords_do_not_match">The new passwords do not match.</string>
    <string name="password_updated_successfully">Password Updated Successfully</string>
    <string name="bio">Bio</string>
    <string name="website">Website</string>
    <string name="mobile">Mobile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="make_my_account_private">Make my account private</string>
    <string name="update_account">Update Account</string>
    <string name="error_loading_the_photo">Error Loading the Photo.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="this_user_is_private">This user is private.</string>
    <string name="my_profile">My Profile</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="search">Search</string>
    <string name="username_all_caps">USERNAME</string>
    <string name="hashtag_all_caps">HASHTAG</string>
    <string name="has_requested_to_follow_you"><b>%s</b> has requested to follow you.</string>
    <string name="has_started_following_you"><b>%s</b> has started following you.</string>
    <string name="s_seconds_ago">%s seconds ago</string>
    <string name="s_second_ago">%s second ago</string>
    <string name="s_days_ago">%s days ago</string>
    <string name="s_day_ago">%s day ago</string>
    <string name="s_months_ago">%s months ago</string>
    <string name="s_month_ago">%s month ago</string>
    <string name="s_years_ago">" %s years ago</string>
    <string name="s_year_ago">%s year ago</string>
    <string name="s_minutes_ago">%s minutes ago</string>
    <string name="s_minute_ago">%s minute ago</string>
    <string name="s_hours_ago">%s hours ago</string>
    <string name="s_hour_ago">%s hour ago</string>
    <string name="recording_stopped_maximum_20_seconds">Recording stopped. Maximum 20 seconds.</string>
    <string name="logout">Logout</string>
    <string name="has_accepted_your_follow_request"><b>%s</b> has accepted your follow request</string>
    <string name="you_need_to_grant_all_requested_permissions">You need to grant all requested permissions.</string>
    <string name="you_should_grant_the_recording_permission">You should grant the recording permission in order to post comments.</string>
    <string name="you_should_grant_all_requested_comments_to_post_a_comment">You should grant all requested permissions to post a comment.</string>
    <string name="confirm">Confirm</string>
    <string name="delete_this_comment">Delete this comment?</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="a_report_has_been_sent_to_developer">The report has been sent to the developer.</string>
    <string name="forward">Forward</string>
    <string name="you_need_to_select_a_photo_first">You need to select a photo first.</string>
    <string name="preview_photo">Preview Photo</string>
    <string name="post_photo">Post Photo</string>
    <string name="trending_stories">Trending Stories</string>
    <string name="my_stories">My Stories</string>
    <string name="share">Share</string>
    <string name="record">Record</string>
    <string name="like">Like</string>
    <string name="zero_comments">0 Comments</string>
    <string name="zero_likes">0 Likes</string>
    <string name="main_photo">Main Photo</string>
    <string name="zero_people_commented_on_this">0 People commented on this.</string>
    <string name="record_button">Record Button</string>
    <string name="d_likes">%d Likes</string>
    <string name="d_comments">%d Comments</string>
    <string name="live">Live</string>
    <string name="s_commented">%s Commented</string>
    <string name="play_stop_audio">Play/Stop Audio</string>
    <string name="post_to_group">Post to Group</string>
    <string name="record_audio">Record Audio</string>
    <string name="error_loading_the_photos">Error loading the photos</string>
    <string name="add_filters">Add Filters</string>
    <string name="add_hashtags">Add Hashtags</string>
    <string name="proceed">proceed</string>
    <string name="unfollow">Unfollow</string>
    <string name="you_have_unfollowed_s_successully">You have unfollowed %s successfully</string>
    <string name="a_request_has_been_sent_to_s">A request has been sent to %s</string>
    <string name="you_have_followed_s_successfully">You have followed %s successfully</string>
    <string name="s_has_commented_on_your_photo">%s has commented on your photo</string>
    <string name="an_error_occurred_while_playing_audio">An error occurred while playing audio.</string>
    <string name="hashtag">Hashtag</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="city">City</string>
    <string name="retry">Retry</string>
    <string name="select_country">Select Country</string>
    <string name="country">Country</string>
    <string name="authorization_error">Authorization Error.</string>
    <string name="comments">Comments</string>
    <string name="receive_notification_when_users_comment_on_your_photos">Receive notifications when users comment on your photos.</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="s_has_liked_your_photo">%s has liked your photo</string>
    <string name="follow_requests">Follow Requests</string>
    <string name="follow_requests_acceptance">Follow Requests Accesptance</string>
    <string name="receive_notifications_when_someone_likes_your_photos">Receive notifications when someone likes your photos</string>
    <string name="receive_notifications_when_people_follow_you">Receive notifications when people follow you.</string>
    <string name="receive_notifications_when_people_send_follow_requests_to_you">Receive notifications when people send follow requests to you</string>
    <string name="receive_notifications_when_people_accept_your_follow_requests">Receive notifications when people accept your follow requests</string>

    <plurals name="d_people_commented_on_this">
        <item quantity="one">%d person commented on this.</item>
        <item quantity="other">%d people commented on this.</item>
    </plurals>

    <plurals name="d_comments">
        <item quantity="one">%d Comment</item>
        <item quantity="other">%d Comments</item>
    </plurals>

    <plurals name="d_likes">
        <item quantity="one">%d Like</item>
        <item quantity="other">%d Likes</item>
    </plurals>

    <string-array name="updateFrequency">
        <item name="1">Daily</item>
        <item name="7">Weekly</item>
        <item name="3">Yearly</item>
        <item name="0">Never(I will Myself) </item>
    </string-array>
    <string-array name="updateFrequencyValues">
        <item name="1">1</item>
        <item name="7">7</item>
        <item name="30">30</item>
        <item name="0">0</item>
    </string-array>
</resources>
