<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Notifications">

        <CheckBoxPreference
            android:key="comment_notification"
            android:summary="@string/receive_notification_when_users_comment_on_your_photos"
            android:title="@string/comments"/>

        <CheckBoxPreference
            android:key="like_notification"
            android:summary="@string/receive_notifications_when_someone_likes_your_photos"
            android:title="@string/like"/>

        <CheckBoxPreference
            android:key="follow_notification"
            android:summary="@string/receive_notifications_when_people_follow_you"
            android:title="@string/follow"/>

        <CheckBoxPreference
            android:key="follow_request_notification"
            android:summary="@string/receive_notifications_when_people_send_follow_requests_to_you"
            android:title="@string/follow_requests"/>

        <CheckBoxPreference
            android:key="accept_follow_request_notification"
            android:summary="@string/receive_notifications_when_people_accept_your_follow_requests"
            android:title="@string/follow_requests_acceptance"/>

    </PreferenceCategory>

</PreferenceScreen>