<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/follow"
        android:icon="@mipmap/follow"
        android:title="@string/follow"
        app:showAsAction="ifRoom"
        />


    <item
        android:id="@+id/edit"
        android:title="@string/Edit"
        android:showAsAction="never"
        />
    <item
        android:id="@+id/change_password"
        android:title="@string/change_password"
        android:showAsAction="never"
        />
    <item
        android:id="@+id/report"
        android:title="@string/report"
        android:showAsAction="never"
        />
    <item
        android:id="@+id/block"
        android:title="@string/block"
        android:showAsAction="never"
        />

    <item
        android:id="@+id/blocked_users"
        android:title="@string/blocked_users"
        android:showAsAction="never"
        />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:showAsAction="never"
        />

    <item
        android:id="@+id/unfollow"
        android:title="@string/unfollow"
        android:showAsAction="never"
        />


</menu>