<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">



        <TextView
            android:id="@+id/about_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="13sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/stories_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/stories"
                    android:textColor="@color/grey_dark"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/follower_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/followers"
                    android:textColor="@color/grey_dark"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/following_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/following"
                    android:textColor="@color/grey_dark"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator"/>

        <Button
            android:id="@+id/follow_button"
            android:layout_width="170dp"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="23dp"
            android:layout_marginTop="23dp"
            android:background="@drawable/bordered_button_main"
            android:elevation="0dp"
            android:shadowRadius="0"
            android:text="@string/follow"
            android:textColor="@color/main"
            android:textSize="14sp"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>